// THIS FILE IS GENERATED BY ftrace_proto_generator.py, PLEASE DON'T EDIT IT!
// Copyright (c) 2021 Huawei Device Co., Ltd.
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//

syntax = "proto3";

option optimize_for = LITE_RUNTIME;

import "binder.proto";
import "block.proto";
import "cgroup.proto";
import "clk.proto";
import "compaction.proto";
import "cpuhp.proto";
import "dma_fence.proto";
import "ext4.proto";
import "filelock.proto";
import "filemap.proto";
import "ftrace.proto";
import "gpio.proto";
import "i2c.proto";
import "ipi.proto";
import "irq.proto";
import "kmem.proto";
import "net.proto";
import "oom.proto";
import "pagemap.proto";
import "power.proto";
import "printk.proto";
import "raw_syscalls.proto";
import "rcu.proto";
import "sched.proto";
import "signal.proto";
import "sunrpc.proto";
import "task.proto";
import "timer.proto";
import "v4l2.proto";
import "vmscan.proto";
import "workqueue.proto";
import "writeback.proto";

message FtraceEvent {
    uint64 timestamp = 1;
    int32 tgid = 2;
    string comm = 3;

    message CommonFileds {
        uint32 type = 1;
        uint32 flags = 2;
        uint32 preempt_count = 3;
        int32 pid = 4;
    };
    CommonFileds common_fields = 50;

    oneof event {
        BinderAllocLruEndFormat binder_alloc_lru_end_format = 100;
        BinderAllocLruStartFormat binder_alloc_lru_start_format = 101;
        BinderAllocPageEndFormat binder_alloc_page_end_format = 102;
        BinderAllocPageStartFormat binder_alloc_page_start_format = 103;
        BinderCommandFormat binder_command_format = 104;
        BinderFreeLruEndFormat binder_free_lru_end_format = 105;
        BinderFreeLruStartFormat binder_free_lru_start_format = 106;
        BinderIoctlFormat binder_ioctl_format = 107;
        BinderIoctlDoneFormat binder_ioctl_done_format = 108;
        BinderLockFormat binder_lock_format = 109;
        BinderLockedFormat binder_locked_format = 110;
        BinderReadDoneFormat binder_read_done_format = 111;
        BinderReturnFormat binder_return_format = 112;
        BinderTransactionFormat binder_transaction_format = 113;
        BinderTransactionAllocBufFormat binder_transaction_alloc_buf_format = 114;
        BinderTransactionBufferReleaseFormat binder_transaction_buffer_release_format = 115;
        BinderTransactionFailedBufferReleaseFormat binder_transaction_failed_buffer_release_format = 116;
        BinderTransactionFdFormat binder_transaction_fd_format = 117;
        BinderTransactionNodeToRefFormat binder_transaction_node_to_ref_format = 118;
        BinderTransactionReceivedFormat binder_transaction_received_format = 119;
        BinderTransactionRefToNodeFormat binder_transaction_ref_to_node_format = 120;
        BinderTransactionRefToRefFormat binder_transaction_ref_to_ref_format = 121;
        BinderUnlockFormat binder_unlock_format = 122;
        BinderUnmapKernelEndFormat binder_unmap_kernel_end_format = 123;
        BinderUnmapKernelStartFormat binder_unmap_kernel_start_format = 124;
        BinderUnmapUserEndFormat binder_unmap_user_end_format = 125;
        BinderUnmapUserStartFormat binder_unmap_user_start_format = 126;
        BinderUpdatePageRangeFormat binder_update_page_range_format = 127;
        BinderWaitForWorkFormat binder_wait_for_work_format = 128;
        BinderWriteDoneFormat binder_write_done_format = 129;
        BlockBioBackmergeFormat block_bio_backmerge_format = 200;
        BlockBioBounceFormat block_bio_bounce_format = 201;
        BlockBioCompleteFormat block_bio_complete_format = 202;
        BlockBioFrontmergeFormat block_bio_frontmerge_format = 203;
        BlockBioQueueFormat block_bio_queue_format = 204;
        BlockBioRemapFormat block_bio_remap_format = 205;
        BlockDirtyBufferFormat block_dirty_buffer_format = 206;
        BlockGetrqFormat block_getrq_format = 207;
        BlockPlugFormat block_plug_format = 208;
        BlockRqCompleteFormat block_rq_complete_format = 209;
        BlockRqInsertFormat block_rq_insert_format = 210;
        BlockRqIssueFormat block_rq_issue_format = 211;
        BlockRqRemapFormat block_rq_remap_format = 212;
        BlockRqRequeueFormat block_rq_requeue_format = 213;
        BlockSleeprqFormat block_sleeprq_format = 214;
        BlockSplitFormat block_split_format = 215;
        BlockTouchBufferFormat block_touch_buffer_format = 216;
        BlockUnplugFormat block_unplug_format = 217;
        CgroupAttachTaskFormat cgroup_attach_task_format = 300;
        CgroupDestroyRootFormat cgroup_destroy_root_format = 301;
        CgroupMkdirFormat cgroup_mkdir_format = 302;
        CgroupReleaseFormat cgroup_release_format = 303;
        CgroupRemountFormat cgroup_remount_format = 304;
        CgroupRenameFormat cgroup_rename_format = 305;
        CgroupRmdirFormat cgroup_rmdir_format = 306;
        CgroupSetupRootFormat cgroup_setup_root_format = 307;
        CgroupTransferTasksFormat cgroup_transfer_tasks_format = 308;
        ClkDisableFormat clk_disable_format = 400;
        ClkDisableCompleteFormat clk_disable_complete_format = 401;
        ClkEnableFormat clk_enable_format = 402;
        ClkEnableCompleteFormat clk_enable_complete_format = 403;
        ClkPrepareFormat clk_prepare_format = 404;
        ClkPrepareCompleteFormat clk_prepare_complete_format = 405;
        ClkSetParentFormat clk_set_parent_format = 406;
        ClkSetParentCompleteFormat clk_set_parent_complete_format = 407;
        ClkSetPhaseFormat clk_set_phase_format = 408;
        ClkSetPhaseCompleteFormat clk_set_phase_complete_format = 409;
        ClkSetRateFormat clk_set_rate_format = 410;
        ClkSetRateCompleteFormat clk_set_rate_complete_format = 411;
        ClkUnprepareFormat clk_unprepare_format = 412;
        ClkUnprepareCompleteFormat clk_unprepare_complete_format = 413;
        MmCompactionBeginFormat mm_compaction_begin_format = 500;
        MmCompactionDeferCompactionFormat mm_compaction_defer_compaction_format = 501;
        MmCompactionDeferResetFormat mm_compaction_defer_reset_format = 502;
        MmCompactionDeferredFormat mm_compaction_deferred_format = 503;
        MmCompactionEndFormat mm_compaction_end_format = 504;
        MmCompactionFinishedFormat mm_compaction_finished_format = 505;
        MmCompactionIsolateFreepagesFormat mm_compaction_isolate_freepages_format = 506;
        MmCompactionIsolateMigratepagesFormat mm_compaction_isolate_migratepages_format = 507;
        MmCompactionMigratepagesFormat mm_compaction_migratepages_format = 508;
        MmCompactionSuitableFormat mm_compaction_suitable_format = 509;
        MmCompactionTryToCompactPagesFormat mm_compaction_try_to_compact_pages_format = 510;
        CpuhpEnterFormat cpuhp_enter_format = 600;
        CpuhpExitFormat cpuhp_exit_format = 601;
        CpuhpMultiEnterFormat cpuhp_multi_enter_format = 602;
        DmaFenceDestroyFormat dma_fence_destroy_format = 700;
        DmaFenceEmitFormat dma_fence_emit_format = 701;
        DmaFenceEnableSignalFormat dma_fence_enable_signal_format = 702;
        DmaFenceInitFormat dma_fence_init_format = 703;
        DmaFenceSignaledFormat dma_fence_signaled_format = 704;
        DmaFenceWaitEndFormat dma_fence_wait_end_format = 705;
        DmaFenceWaitStartFormat dma_fence_wait_start_format = 706;
        Ext4AllocDaBlocksFormat ext4_alloc_da_blocks_format = 800;
        Ext4AllocateBlocksFormat ext4_allocate_blocks_format = 801;
        Ext4AllocateInodeFormat ext4_allocate_inode_format = 802;
        Ext4BeginOrderedTruncateFormat ext4_begin_ordered_truncate_format = 803;
        Ext4CollapseRangeFormat ext4_collapse_range_format = 804;
        Ext4DaReleaseSpaceFormat ext4_da_release_space_format = 805;
        Ext4DaReserveSpaceFormat ext4_da_reserve_space_format = 806;
        Ext4DaUpdateReserveSpaceFormat ext4_da_update_reserve_space_format = 807;
        Ext4DaWriteBeginFormat ext4_da_write_begin_format = 808;
        Ext4DaWriteEndFormat ext4_da_write_end_format = 809;
        Ext4DaWritePagesFormat ext4_da_write_pages_format = 810;
        Ext4DaWritePagesExtentFormat ext4_da_write_pages_extent_format = 811;
        Ext4DirectIoEnterFormat ext4_direct_io_enter_format = 812;
        Ext4DirectIoExitFormat ext4_direct_io_exit_format = 813;
        Ext4DiscardBlocksFormat ext4_discard_blocks_format = 814;
        Ext4DiscardPreallocationsFormat ext4_discard_preallocations_format = 815;
        Ext4DropInodeFormat ext4_drop_inode_format = 816;
        Ext4EsCacheExtentFormat ext4_es_cache_extent_format = 817;
        Ext4EsFindDelayedExtentRangeEnterFormat ext4_es_find_delayed_extent_range_enter_format = 818;
        Ext4EsFindDelayedExtentRangeExitFormat ext4_es_find_delayed_extent_range_exit_format = 819;
        Ext4EsInsertExtentFormat ext4_es_insert_extent_format = 820;
        Ext4EsLookupExtentEnterFormat ext4_es_lookup_extent_enter_format = 821;
        Ext4EsLookupExtentExitFormat ext4_es_lookup_extent_exit_format = 822;
        Ext4EsRemoveExtentFormat ext4_es_remove_extent_format = 823;
        Ext4EsShrinkFormat ext4_es_shrink_format = 824;
        Ext4EsShrinkCountFormat ext4_es_shrink_count_format = 825;
        Ext4EsShrinkScanEnterFormat ext4_es_shrink_scan_enter_format = 826;
        Ext4EsShrinkScanExitFormat ext4_es_shrink_scan_exit_format = 827;
        Ext4EvictInodeFormat ext4_evict_inode_format = 828;
        Ext4ExtConvertToInitializedEnterFormat ext4_ext_convert_to_initialized_enter_format = 829;
        Ext4ExtConvertToInitializedFastpathFormat ext4_ext_convert_to_initialized_fastpath_format = 830;
        Ext4ExtHandleUnwrittenExtentsFormat ext4_ext_handle_unwritten_extents_format = 831;
        Ext4ExtInCacheFormat ext4_ext_in_cache_format = 832;
        Ext4ExtLoadExtentFormat ext4_ext_load_extent_format = 833;
        Ext4ExtMapBlocksEnterFormat ext4_ext_map_blocks_enter_format = 834;
        Ext4ExtMapBlocksExitFormat ext4_ext_map_blocks_exit_format = 835;
        Ext4ExtPutInCacheFormat ext4_ext_put_in_cache_format = 836;
        Ext4ExtRemoveSpaceFormat ext4_ext_remove_space_format = 837;
        Ext4ExtRemoveSpaceDoneFormat ext4_ext_remove_space_done_format = 838;
        Ext4ExtRmIdxFormat ext4_ext_rm_idx_format = 839;
        Ext4ExtRmLeafFormat ext4_ext_rm_leaf_format = 840;
        Ext4ExtShowExtentFormat ext4_ext_show_extent_format = 841;
        Ext4FallocateEnterFormat ext4_fallocate_enter_format = 842;
        Ext4FallocateExitFormat ext4_fallocate_exit_format = 843;
        Ext4FindDelallocRangeFormat ext4_find_delalloc_range_format = 844;
        Ext4ForgetFormat ext4_forget_format = 845;
        Ext4FreeBlocksFormat ext4_free_blocks_format = 846;
        Ext4FreeInodeFormat ext4_free_inode_format = 847;
        Ext4GetImpliedClusterAllocExitFormat ext4_get_implied_cluster_alloc_exit_format = 848;
        Ext4GetReservedClusterAllocFormat ext4_get_reserved_cluster_alloc_format = 849;
        Ext4IndMapBlocksEnterFormat ext4_ind_map_blocks_enter_format = 850;
        Ext4IndMapBlocksExitFormat ext4_ind_map_blocks_exit_format = 851;
        Ext4InsertRangeFormat ext4_insert_range_format = 852;
        Ext4InvalidatepageFormat ext4_invalidatepage_format = 853;
        Ext4JournalStartFormat ext4_journal_start_format = 854;
        Ext4JournalStartReservedFormat ext4_journal_start_reserved_format = 855;
        Ext4JournalledInvalidatepageFormat ext4_journalled_invalidatepage_format = 856;
        Ext4JournalledWriteEndFormat ext4_journalled_write_end_format = 857;
        Ext4LoadInodeFormat ext4_load_inode_format = 858;
        Ext4LoadInodeBitmapFormat ext4_load_inode_bitmap_format = 859;
        Ext4MarkInodeDirtyFormat ext4_mark_inode_dirty_format = 860;
        Ext4MbBitmapLoadFormat ext4_mb_bitmap_load_format = 861;
        Ext4MbBuddyBitmapLoadFormat ext4_mb_buddy_bitmap_load_format = 862;
        Ext4MbDiscardPreallocationsFormat ext4_mb_discard_preallocations_format = 863;
        Ext4MbNewGroupPaFormat ext4_mb_new_group_pa_format = 864;
        Ext4MbNewInodePaFormat ext4_mb_new_inode_pa_format = 865;
        Ext4MbReleaseGroupPaFormat ext4_mb_release_group_pa_format = 866;
        Ext4MbReleaseInodePaFormat ext4_mb_release_inode_pa_format = 867;
        Ext4MballocAllocFormat ext4_mballoc_alloc_format = 868;
        Ext4MballocDiscardFormat ext4_mballoc_discard_format = 869;
        Ext4MballocFreeFormat ext4_mballoc_free_format = 870;
        Ext4MballocPreallocFormat ext4_mballoc_prealloc_format = 871;
        Ext4OtherInodeUpdateTimeFormat ext4_other_inode_update_time_format = 872;
        Ext4PunchHoleFormat ext4_punch_hole_format = 873;
        Ext4ReadBlockBitmapLoadFormat ext4_read_block_bitmap_load_format = 874;
        Ext4ReadpageFormat ext4_readpage_format = 875;
        Ext4ReleasepageFormat ext4_releasepage_format = 876;
        Ext4RemoveBlocksFormat ext4_remove_blocks_format = 877;
        Ext4RequestBlocksFormat ext4_request_blocks_format = 878;
        Ext4RequestInodeFormat ext4_request_inode_format = 879;
        Ext4SyncFileEnterFormat ext4_sync_file_enter_format = 880;
        Ext4SyncFileExitFormat ext4_sync_file_exit_format = 881;
        Ext4SyncFsFormat ext4_sync_fs_format = 882;
        Ext4TrimAllFreeFormat ext4_trim_all_free_format = 883;
        Ext4TrimExtentFormat ext4_trim_extent_format = 884;
        Ext4TruncateEnterFormat ext4_truncate_enter_format = 885;
        Ext4TruncateExitFormat ext4_truncate_exit_format = 886;
        Ext4UnlinkEnterFormat ext4_unlink_enter_format = 887;
        Ext4UnlinkExitFormat ext4_unlink_exit_format = 888;
        Ext4WriteBeginFormat ext4_write_begin_format = 889;
        Ext4WriteEndFormat ext4_write_end_format = 890;
        Ext4WritepageFormat ext4_writepage_format = 891;
        Ext4WritepagesFormat ext4_writepages_format = 892;
        Ext4WritepagesResultFormat ext4_writepages_result_format = 893;
        Ext4ZeroRangeFormat ext4_zero_range_format = 894;
        BreakLeaseBlockFormat break_lease_block_format = 900;
        BreakLeaseNoblockFormat break_lease_noblock_format = 901;
        BreakLeaseUnblockFormat break_lease_unblock_format = 902;
        GenericAddLeaseFormat generic_add_lease_format = 903;
        GenericDeleteLeaseFormat generic_delete_lease_format = 904;
        TimeOutLeasesFormat time_out_leases_format = 905;
        MmFilemapAddToPageCacheFormat mm_filemap_add_to_page_cache_format = 1000;
        MmFilemapDeleteFromPageCacheFormat mm_filemap_delete_from_page_cache_format = 1001;
        BputsFormat bputs_format = 1100;
        BranchFormat branch_format = 1101;
        ContextSwitchFormat context_switch_format = 1102;
        FuncgraphEntryFormat funcgraph_entry_format = 1103;
        FuncgraphExitFormat funcgraph_exit_format = 1104;
        FunctionFormat function_format = 1105;
        KernelStackFormat kernel_stack_format = 1106;
        MmiotraceMapFormat mmiotrace_map_format = 1107;
        MmiotraceRwFormat mmiotrace_rw_format = 1108;
        PrintFormat print_format = 1109;
        UserStackFormat user_stack_format = 1110;
        WakeupFormat wakeup_format = 1111;
        GpioDirectionFormat gpio_direction_format = 1200;
        GpioValueFormat gpio_value_format = 1201;
        I2cReadFormat i2c_read_format = 1300;
        I2cReplyFormat i2c_reply_format = 1301;
        I2cResultFormat i2c_result_format = 1302;
        I2cWriteFormat i2c_write_format = 1303;
        IpiEntryFormat ipi_entry_format = 1400;
        IpiExitFormat ipi_exit_format = 1401;
        IpiRaiseFormat ipi_raise_format = 1402;
        IrqHandlerEntryFormat irq_handler_entry_format = 1500;
        IrqHandlerExitFormat irq_handler_exit_format = 1501;
        SoftirqEntryFormat softirq_entry_format = 1502;
        SoftirqExitFormat softirq_exit_format = 1503;
        SoftirqRaiseFormat softirq_raise_format = 1504;
        KfreeFormat kfree_format = 1600;
        KmallocFormat kmalloc_format = 1601;
        KmallocNodeFormat kmalloc_node_format = 1602;
        KmemCacheAllocFormat kmem_cache_alloc_format = 1603;
        KmemCacheAllocNodeFormat kmem_cache_alloc_node_format = 1604;
        KmemCacheFreeFormat kmem_cache_free_format = 1605;
        MmPageAllocFormat mm_page_alloc_format = 1606;
        MmPageAllocExtfragFormat mm_page_alloc_extfrag_format = 1607;
        MmPageAllocZoneLockedFormat mm_page_alloc_zone_locked_format = 1608;
        MmPageFreeFormat mm_page_free_format = 1609;
        MmPageFreeBatchedFormat mm_page_free_batched_format = 1610;
        MmPagePcpuDrainFormat mm_page_pcpu_drain_format = 1611;
        NapiGroFragsEntryFormat napi_gro_frags_entry_format = 1700;
        NapiGroReceiveEntryFormat napi_gro_receive_entry_format = 1701;
        NetDevQueueFormat net_dev_queue_format = 1702;
        NetDevStartXmitFormat net_dev_start_xmit_format = 1703;
        NetDevXmitFormat net_dev_xmit_format = 1704;
        NetifReceiveSkbFormat netif_receive_skb_format = 1705;
        NetifReceiveSkbEntryFormat netif_receive_skb_entry_format = 1706;
        NetifRxFormat netif_rx_format = 1707;
        NetifRxEntryFormat netif_rx_entry_format = 1708;
        NetifRxNiEntryFormat netif_rx_ni_entry_format = 1709;
        OomScoreAdjUpdateFormat oom_score_adj_update_format = 1800;
        MmLruActivateFormat mm_lru_activate_format = 1900;
        MmLruInsertionFormat mm_lru_insertion_format = 1901;
        ClockDisableFormat clock_disable_format = 2000;
        ClockEnableFormat clock_enable_format = 2001;
        ClockSetRateFormat clock_set_rate_format = 2002;
        CpuFrequencyFormat cpu_frequency_format = 2003;
        CpuFrequencyLimitsFormat cpu_frequency_limits_format = 2004;
        CpuIdleFormat cpu_idle_format = 2005;
        DevPmQosAddRequestFormat dev_pm_qos_add_request_format = 2006;
        DevPmQosRemoveRequestFormat dev_pm_qos_remove_request_format = 2007;
        DevPmQosUpdateRequestFormat dev_pm_qos_update_request_format = 2008;
        DevicePmCallbackEndFormat device_pm_callback_end_format = 2009;
        DevicePmCallbackStartFormat device_pm_callback_start_format = 2010;
        PmQosAddRequestFormat pm_qos_add_request_format = 2011;
        PmQosRemoveRequestFormat pm_qos_remove_request_format = 2012;
        PmQosUpdateFlagsFormat pm_qos_update_flags_format = 2013;
        PmQosUpdateRequestFormat pm_qos_update_request_format = 2014;
        PmQosUpdateRequestTimeoutFormat pm_qos_update_request_timeout_format = 2015;
        PmQosUpdateTargetFormat pm_qos_update_target_format = 2016;
        PowerDomainTargetFormat power_domain_target_format = 2017;
        PstateSampleFormat pstate_sample_format = 2018;
        SuspendResumeFormat suspend_resume_format = 2019;
        WakeupSourceActivateFormat wakeup_source_activate_format = 2020;
        WakeupSourceDeactivateFormat wakeup_source_deactivate_format = 2021;
        ConsoleFormat console_format = 2100;
        SysEnterFormat sys_enter_format = 2200;
        SysExitFormat sys_exit_format = 2201;
        RcuUtilizationFormat rcu_utilization_format = 2300;
        SchedKthreadStopFormat sched_kthread_stop_format = 2400;
        SchedKthreadStopRetFormat sched_kthread_stop_ret_format = 2401;
        SchedMigrateTaskFormat sched_migrate_task_format = 2402;
        SchedMoveNumaFormat sched_move_numa_format = 2403;
        SchedPiSetprioFormat sched_pi_setprio_format = 2404;
        SchedProcessExecFormat sched_process_exec_format = 2405;
        SchedProcessExitFormat sched_process_exit_format = 2406;
        SchedProcessForkFormat sched_process_fork_format = 2407;
        SchedProcessFreeFormat sched_process_free_format = 2408;
        SchedProcessWaitFormat sched_process_wait_format = 2409;
        SchedStatBlockedFormat sched_stat_blocked_format = 2410;
        SchedStatIowaitFormat sched_stat_iowait_format = 2411;
        SchedStatRuntimeFormat sched_stat_runtime_format = 2412;
        SchedStatSleepFormat sched_stat_sleep_format = 2413;
        SchedStatWaitFormat sched_stat_wait_format = 2414;
        SchedStickNumaFormat sched_stick_numa_format = 2415;
        SchedSwapNumaFormat sched_swap_numa_format = 2416;
        SchedSwitchFormat sched_switch_format = 2417;
        SchedWaitTaskFormat sched_wait_task_format = 2418;
        SchedWakeIdleWithoutIpiFormat sched_wake_idle_without_ipi_format = 2419;
        SchedWakeupFormat sched_wakeup_format = 2420;
        SchedWakeupNewFormat sched_wakeup_new_format = 2421;
        SchedWakingFormat sched_waking_format = 2422;
        SignalDeliverFormat signal_deliver_format = 2500;
        SignalGenerateFormat signal_generate_format = 2501;
        RpcBindStatusFormat rpc_bind_status_format = 2600;
        RpcCallStatusFormat rpc_call_status_format = 2601;
        RpcConnectStatusFormat rpc_connect_status_format = 2602;
        RpcSocketCloseFormat rpc_socket_close_format = 2603;
        RpcSocketConnectFormat rpc_socket_connect_format = 2604;
        RpcSocketErrorFormat rpc_socket_error_format = 2605;
        RpcSocketResetConnectionFormat rpc_socket_reset_connection_format = 2606;
        RpcSocketShutdownFormat rpc_socket_shutdown_format = 2607;
        RpcSocketStateChangeFormat rpc_socket_state_change_format = 2608;
        RpcTaskBeginFormat rpc_task_begin_format = 2609;
        RpcTaskCompleteFormat rpc_task_complete_format = 2610;
        RpcTaskRunActionFormat rpc_task_run_action_format = 2611;
        RpcTaskSleepFormat rpc_task_sleep_format = 2612;
        RpcTaskWakeupFormat rpc_task_wakeup_format = 2613;
        SvcHandleXprtFormat svc_handle_xprt_format = 2614;
        SvcProcessFormat svc_process_format = 2615;
        SvcRecvFormat svc_recv_format = 2616;
        SvcSendFormat svc_send_format = 2617;
        SvcWakeUpFormat svc_wake_up_format = 2618;
        SvcXprtDequeueFormat svc_xprt_dequeue_format = 2619;
        SvcXprtDoEnqueueFormat svc_xprt_do_enqueue_format = 2620;
        XprtCompleteRqstFormat xprt_complete_rqst_format = 2621;
        XprtLookupRqstFormat xprt_lookup_rqst_format = 2622;
        XprtTransmitFormat xprt_transmit_format = 2623;
        XsTcpDataReadyFormat xs_tcp_data_ready_format = 2624;
        XsTcpDataRecvFormat xs_tcp_data_recv_format = 2625;
        TaskNewtaskFormat task_newtask_format = 2700;
        TaskRenameFormat task_rename_format = 2701;
        HrtimerCancelFormat hrtimer_cancel_format = 2800;
        HrtimerExpireEntryFormat hrtimer_expire_entry_format = 2801;
        HrtimerExpireExitFormat hrtimer_expire_exit_format = 2802;
        HrtimerInitFormat hrtimer_init_format = 2803;
        HrtimerStartFormat hrtimer_start_format = 2804;
        ItimerExpireFormat itimer_expire_format = 2805;
        ItimerStateFormat itimer_state_format = 2806;
        TimerCancelFormat timer_cancel_format = 2807;
        TimerExpireEntryFormat timer_expire_entry_format = 2808;
        TimerExpireExitFormat timer_expire_exit_format = 2809;
        TimerInitFormat timer_init_format = 2810;
        TimerStartFormat timer_start_format = 2811;
        V4l2DqbufFormat v4l2_dqbuf_format = 2900;
        V4l2QbufFormat v4l2_qbuf_format = 2901;
        Vb2V4l2BufDoneFormat vb2_v4l2_buf_done_format = 2902;
        Vb2V4l2BufQueueFormat vb2_v4l2_buf_queue_format = 2903;
        Vb2V4l2DqbufFormat vb2_v4l2_dqbuf_format = 2904;
        Vb2V4l2QbufFormat vb2_v4l2_qbuf_format = 2905;
        MmShrinkSlabEndFormat mm_shrink_slab_end_format = 3000;
        MmShrinkSlabStartFormat mm_shrink_slab_start_format = 3001;
        MmVmscanDirectReclaimBeginFormat mm_vmscan_direct_reclaim_begin_format = 3002;
        MmVmscanDirectReclaimEndFormat mm_vmscan_direct_reclaim_end_format = 3003;
        MmVmscanKswapdSleepFormat mm_vmscan_kswapd_sleep_format = 3004;
        MmVmscanKswapdWakeFormat mm_vmscan_kswapd_wake_format = 3005;
        MmVmscanLruIsolateFormat mm_vmscan_lru_isolate_format = 3006;
        MmVmscanLruShrinkInactiveFormat mm_vmscan_lru_shrink_inactive_format = 3007;
        MmVmscanWakeupKswapdFormat mm_vmscan_wakeup_kswapd_format = 3008;
        MmVmscanWritepageFormat mm_vmscan_writepage_format = 3009;
        WorkqueueActivateWorkFormat workqueue_activate_work_format = 3100;
        WorkqueueExecuteEndFormat workqueue_execute_end_format = 3101;
        WorkqueueExecuteStartFormat workqueue_execute_start_format = 3102;
        WorkqueueQueueWorkFormat workqueue_queue_work_format = 3103;
        BalanceDirtyPagesFormat balance_dirty_pages_format = 3200;
        BdiDirtyRatelimitFormat bdi_dirty_ratelimit_format = 3201;
        GlobalDirtyStateFormat global_dirty_state_format = 3202;
        WbcWritepageFormat wbc_writepage_format = 3203;
        WritebackBdiRegisterFormat writeback_bdi_register_format = 3204;
        WritebackCongestionWaitFormat writeback_congestion_wait_format = 3205;
        WritebackDirtyInodeFormat writeback_dirty_inode_format = 3206;
        WritebackDirtyInodeEnqueueFormat writeback_dirty_inode_enqueue_format = 3207;
        WritebackDirtyInodeStartFormat writeback_dirty_inode_start_format = 3208;
        WritebackDirtyPageFormat writeback_dirty_page_format = 3209;
        WritebackExecFormat writeback_exec_format = 3210;
        WritebackLazytimeFormat writeback_lazytime_format = 3211;
        WritebackLazytimeIputFormat writeback_lazytime_iput_format = 3212;
        WritebackMarkInodeDirtyFormat writeback_mark_inode_dirty_format = 3213;
        WritebackPagesWrittenFormat writeback_pages_written_format = 3214;
        WritebackQueueFormat writeback_queue_format = 3215;
        WritebackQueueIoFormat writeback_queue_io_format = 3216;
        WritebackSbInodesRequeueFormat writeback_sb_inodes_requeue_format = 3217;
        WritebackSingleInodeFormat writeback_single_inode_format = 3218;
        WritebackSingleInodeStartFormat writeback_single_inode_start_format = 3219;
        WritebackStartFormat writeback_start_format = 3220;
        WritebackWaitFormat writeback_wait_format = 3221;
        WritebackWaitIffCongestedFormat writeback_wait_iff_congested_format = 3222;
        WritebackWakeBackgroundFormat writeback_wake_background_format = 3223;
        WritebackWriteInodeFormat writeback_write_inode_format = 3224;
        WritebackWriteInodeStartFormat writeback_write_inode_start_format = 3225;
        WritebackWrittenFormat writeback_written_format = 3226;
    }
}
